Adds several keys throughout the app for various elements and tweaks some title stylings

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -69,8 +69,8 @@ h1.alt {
 
 h2 {
   font-family: 'GaramondSemiBold', serif;
-  letter-spacing: -0.5px;
   font-size: 23px;
+  line-height: 21px;
   letter-spacing: -0.25px;
   margin: 0;
 }
