--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -7,6 +7,10 @@
   --black: #202124;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 @font-face {
   font-family: 'InconsolataExpandedSemiBold';
   src: url('./fonts/Inconsolata_Expanded-SemiBold.ttf') format('truetype');
