--- a/src/components/MapTimeline/MapTimeline.css
+++ b/src/components/MapTimeline/MapTimeline.css
@@ -18,9 +18,13 @@
   margin: -10px 0 -4px;
 }
 
+.MapTimeline .content-container {
+  padding: 20px 20px 0;
+}
+
 .MapTimeline .scroll-container {
   max-width: calc(100% + 40px);
   overflow-x: scroll;
-  padding: 0 30px 40px;
-  margin: 0 -20px -20px;
+  padding: 0 30px 50px;
+  margin: 0 -20px 0;
 }
